--- a/ControleCoontas.Tests/ControleContas.Tests.csproj
+++ b/ControleCoontas.Tests/ControleContas.Tests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ContaCategoriaTest.cs" />
     <Compile Include="UsuarioTest.cs" />
   </ItemGroup>
   <ItemGroup>
